dungeon/src/dsl/antlr/MiniPythonParser/src/DungeonDSLParser.java
// Generated from c:/Users/bjarn/VS_Projects/Dungeon/dungeon/src/dsl/antlr/DungeonDSL.g4 by ANTLR 4.13.1

    package antlr.main;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DungeonDSLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, DOUBLE_LINE=54, ARROW=55, TRUE=56, FALSE=57, ID=58, NUM=59, 
		NUM_DEC=60, WS=61, LINE_COMMENT=62, BLOCK_COMMENT=63, STRING_LITERAL=64;
	public static final int
		RULE_program = 0, RULE_definition = 1, RULE_fn_def = 2, RULE_stmt = 3, 
		RULE_loop_stmt = 4, RULE_var_decl = 5, RULE_expression = 6, RULE_expression_rhs = 7, 
		RULE_assignment = 8, RULE_assignee = 9, RULE_logic_or = 10, RULE_logic_and = 11, 
		RULE_equality = 12, RULE_comparison = 13, RULE_term = 14, RULE_factor = 15, 
		RULE_unary = 16, RULE_func_call = 17, RULE_stmt_block = 18, RULE_stmt_list = 19, 
		RULE_return_stmt = 20, RULE_conditional_stmt = 21, RULE_else_stmt = 22, 
		RULE_ret_type_def = 23, RULE_param_def = 24, RULE_type_decl = 25, RULE_param_def_list = 26, 
		RULE_entity_type_def = 27, RULE_item_type_def = 28, RULE_component_def_list = 29, 
		RULE_aggregate_value_def = 30, RULE_object_def = 31, RULE_property_def_list = 32, 
		RULE_property_def = 33, RULE_expression_list = 34, RULE_grouped_expression = 35, 
		RULE_list_definition = 36, RULE_set_definition = 37, RULE_primary = 38, 
		RULE_dot_def = 39, RULE_dot_stmt_list = 40, RULE_dot_stmt = 41, RULE_dot_edge_stmt = 42, 
		RULE_dot_node_list = 43, RULE_dot_edge_RHS = 44, RULE_dot_node_stmt = 45, 
		RULE_dot_attr_list = 46, RULE_dot_attr = 47, RULE_dependency_type = 48;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "definition", "fn_def", "stmt", "loop_stmt", "var_decl", "expression", 
			"expression_rhs", "assignment", "assignee", "logic_or", "logic_and", 
			"equality", "comparison", "term", "factor", "unary", "func_call", "stmt_block", 
			"stmt_list", "return_stmt", "conditional_stmt", "else_stmt", "ret_type_def", 
			"param_def", "type_decl", "param_def_list", "entity_type_def", "item_type_def", 
			"component_def_list", "aggregate_value_def", "object_def", "property_def_list", 
			"property_def", "expression_list", "grouped_expression", "list_definition", 
			"set_definition", "primary", "dot_def", "dot_stmt_list", "dot_stmt", 
			"dot_edge_stmt", "dot_node_list", "dot_edge_RHS", "dot_node_stmt", "dot_attr_list", 
			"dot_attr", "dependency_type"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'fn'", "'('", "')'", "';'", "'for'", "'in'", "'count'", "'while'", 
			"'var'", "'='", "':'", "'.'", "'or'", "'and'", "'!='", "'=='", "'>'", 
			"'>='", "'<'", "'<='", "'-'", "'+'", "'/'", "'*'", "'!'", "'{'", "'}'", 
			"'return'", "'if'", "'else'", "'<>'", "'[]'", "'['", "']'", "','", "'entity_type'", 
			"'item_type'", "'graph'", "'type'", "'seq'", "'sequence'", "'st_m'", 
			"'subtask_mandatory'", "'st_o'", "'subtask_optional'", "'c_c'", "'conditional_correct'", 
			"'c_f'", "'conditional_false'", "'seq_and'", "'sequence_and'", "'seq_or'", 
			"'sequence_or'", "'--'", "'->'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "DOUBLE_LINE", "ARROW", "TRUE", "FALSE", 
			"ID", "NUM", "NUM_DEC", "WS", "LINE_COMMENT", "BLOCK_COMMENT", "STRING_LITERAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "DungeonDSL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DungeonDSLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(DungeonDSLParser.EOF, 0); }
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 288230857188048898L) != 0)) {
				{
				{
				setState(98);
				definition();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefinitionContext extends ParserRuleContext {
		public Dot_defContext dot_def() {
			return getRuleContext(Dot_defContext.class,0);
		}
		public Object_defContext object_def() {
			return getRuleContext(Object_defContext.class,0);
		}
		public Entity_type_defContext entity_type_def() {
			return getRuleContext(Entity_type_defContext.class,0);
		}
		public Item_type_defContext item_type_def() {
			return getRuleContext(Item_type_defContext.class,0);
		}
		public Fn_defContext fn_def() {
			return getRuleContext(Fn_defContext.class,0);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_definition);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__37:
				enterOuterAlt(_localctx, 1);
				{
				setState(106);
				dot_def();
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(107);
				object_def();
				}
				break;
			case T__35:
				enterOuterAlt(_localctx, 3);
				{
				setState(108);
				entity_type_def();
				}
				break;
			case T__36:
				enterOuterAlt(_localctx, 4);
				{
				setState(109);
				item_type_def();
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 5);
				{
				setState(110);
				fn_def();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Fn_defContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(DungeonDSLParser.ID, 0); }
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public Param_def_listContext param_def_list() {
			return getRuleContext(Param_def_listContext.class,0);
		}
		public Ret_type_defContext ret_type_def() {
			return getRuleContext(Ret_type_defContext.class,0);
		}
		public Fn_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fn_def; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitFn_def(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fn_defContext fn_def() throws RecognitionException {
		Fn_defContext _localctx = new Fn_defContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_fn_def);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(T__0);
			setState(114);
			match(ID);
			setState(115);
			match(T__1);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__32 || _la==ID) {
				{
				setState(116);
				param_def_list();
				}
			}

			setState(119);
			match(T__2);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ARROW) {
				{
				setState(120);
				ret_type_def();
				}
			}

			setState(123);
			stmt_block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Var_declContext var_decl() {
			return getRuleContext(Var_declContext.class,0);
		}
		public Stmt_blockContext stmt_block() {
			return getRuleContext(Stmt_blockContext.class,0);
		}
		public Conditional_stmtContext conditional_stmt() {
			return getRuleContext(Conditional_stmtContext.class,0);
		}
		public Return_stmtContext return_stmt() {
			return getRuleContext(Return_stmtContext.class,0);
		}
		public Loop_stmtContext loop_stmt() {
			return getRuleContext(Loop_stmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmt);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
			case T__18:
			case T__20:
			case T__24:
			case T__32:
			case TRUE:
			case FALSE:
			case ID:
			case NUM:
			case NUM_DEC:
			case STRING_LITERAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(125);
				expression();
				setState(126);
				match(T__3);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				var_decl();
				}
				break;
			case T__25:
				enterOuterAlt(_localctx, 3);
				{
				setState(129);
				stmt_block();
				}
				break;
			case T__28:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				conditional_stmt();
				}
				break;
			case T__27:
				enterOuterAlt(_localctx, 5);
				{
				setState(131);
				return_stmt();
				}
				break;
			case T__4:
			case T__7:
				enterOuterAlt(_localctx, 6);
				{
				setState(132);
				loop_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Loop_stmtContext extends ParserRuleContext {
		public Loop_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_loop_stmt; }
	 
		public Loop_stmtContext() { }
		public void copyFrom(Loop_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class While_loopContext extends Loop_stmtContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public While_loopContext(Loop_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitWhile_loop(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class For_loop_countingContext extends Loop_stmtContext {
		public Type_declContext type_id;
		public Token var_id;
		public ExpressionContext iteratable_id;
		public Token counter_id;
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public Type_declContext type_decl() {
			return getRuleContext(Type_declContext.class,0);
		}
		public List<TerminalNode> ID() { return getTokens(DungeonDSLParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(DungeonDSLParser.ID, i);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public For_loop_countingContext(Loop_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitFor_loop_counting(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class For_loopContext extends Loop_stmtContext {
		public Type_declContext type_id;
		public Token var_id;
		public ExpressionContext iteratable_id;
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public Type_declContext type_decl() {
			return getRuleContext(Type_declContext.class,0);
		}
		public TerminalNode ID() { return getToken(DungeonDSLParser.ID, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public For_loopContext(Loop_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitFor_loop(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Loop_stmtContext loop_stmt() throws RecognitionException {
		Loop_stmtContext _localctx = new Loop_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_loop_stmt);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new For_loopContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				match(T__4);
				setState(136);
				((For_loopContext)_localctx).type_id = type_decl(0);
				setState(137);
				((For_loopContext)_localctx).var_id = match(ID);
				setState(138);
				match(T__5);
				setState(139);
				((For_loopContext)_localctx).iteratable_id = expression();
				setState(140);
				stmt();
				}
				break;
			case 2:
				_localctx = new For_loop_countingContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(142);
				match(T__4);
				setState(143);
				((For_loop_countingContext)_localctx).type_id = type_decl(0);
				setState(144);
				((For_loop_countingContext)_localctx).var_id = match(ID);
				setState(145);
				match(T__5);
				setState(146);
				((For_loop_countingContext)_localctx).iteratable_id = expression();
				setState(147);
				match(T__6);
				setState(148);
				((For_loop_countingContext)_localctx).counter_id = match(ID);
				setState(149);
				stmt();
				}
				break;
			case 3:
				_localctx = new While_loopContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(151);
				match(T__7);
				setState(152);
				expression();
				setState(153);
				stmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Var_declContext extends ParserRuleContext {
		public Var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_decl; }
	 
		public Var_declContext() { }
		public void copyFrom(Var_declContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Var_decl_assignmentContext extends Var_declContext {
		public Token id;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode ID() { return getToken(DungeonDSLParser.ID, 0); }
		public Var_decl_assignmentContext(Var_declContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitVar_decl_assignment(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Var_decl_type_declContext extends Var_declContext {
		public Token id;
		public Type_declContext type_decl() {
			return getRuleContext(Type_declContext.class,0);
		}
		public TerminalNode ID() { return getToken(DungeonDSLParser.ID, 0); }
		public Var_decl_type_declContext(Var_declContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitVar_decl_type_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declContext var_decl() throws RecognitionException {
		Var_declContext _localctx = new Var_declContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_var_decl);
		try {
			setState(169);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new Var_decl_assignmentContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(157);
				match(T__8);
				setState(158);
				((Var_decl_assignmentContext)_localctx).id = match(ID);
				setState(159);
				match(T__9);
				setState(160);
				expression();
				setState(161);
				match(T__3);
				}
				break;
			case 2:
				_localctx = new Var_decl_type_declContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				match(T__8);
				setState(164);
				((Var_decl_type_declContext)_localctx).id = match(ID);
				setState(165);
				match(T__10);
				setState(166);
				type_decl(0);
				setState(167);
				match(T__3);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public Expression_rhsContext expression_rhs() {
			return getRuleContext(Expression_rhsContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			assignment();
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(172);
				expression_rhs();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Expression_rhsContext extends ParserRuleContext {
		public Expression_rhsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression_rhs; }
	 
		public Expression_rhsContext() { }
		public void copyFrom(Expression_rhsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Method_call_expressionContext extends Expression_rhsContext {
		public Func_callContext func_call() {
			return getRuleContext(Func_callContext.class,0);
		}
		public Expression_rhsContext expression_rhs() {
			return getRuleContext(Expression_rhsContext.class,0);
		}
		public Method_call_expressionContext(Expression_rhsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitMethod_call_expression(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Member_access_expressionContext extends Expression_rhsContext {
		public TerminalNode ID() { return getToken(DungeonDSLParser.ID, 0); }
		public Expression_rhsContext expression_rhs() {
			return getRuleContext(Expression_rhsContext.class,0);
		}
		public Member_access_expressionContext(Expression_rhsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DungeonDSLVisitor ) return ((DungeonDSLVisitor<? extends T>)visitor).visitMember_access_expression(this);
			else return visitor.visitChildren(this);
		}
	}
